2009-11-16  Dmitry Dulepov  <dmitry.dulepov@gmail.com>

	* Fixed bug #12529: tx_realurl->isMultidomain called multiple times

2009-10-08  Dmitry Dulepov  <dmitry.dulepov@gmail.com>

	* Fixed bug #11393: 2 folder with "exclude from speaking URL" - 404Error
	* Fixed bug #9545: "exclude from speaking url segment" doesn't work if there are two or more pages with the flag in the same directory
	* Fixed bug #12137: Field field_alias in table tx_realurl_uniqalias too small when using CONCAT_WS('-',verylongfieldname,other...) in alias_field
	* Fixed bug #11042: Wrong behaviuor of exclude from speaking url parameter
	* Fixed bug #9877: Problems with PD-Admin

2009-10-06  Dmitry Dulepov  <dmitry.dulepov@gmail.com>

	* Fixed bug #10329: Speaking URL path segment disappered from page overlay

2009-10-02  Dmitry Dulepov  <dmitry.dulepov@gmail.com>

	* Changed index bk_realurl02 (shorter key)
	* Commented TCEmain hook: it needs a better way of handling page renames
	* Fixed bug #9976: realurl stops working when encodeSpURL_postProc hook is used
	* Fixed bug #11873: Error in dokumentation decodeSpURL_postProc does not exist
	* Fixed bug #11347: Strip Tags in Titles
	* Fixed bug #11777: Add new field "spurl_string" to tx_realurl_chashcache that makes it easier to debug the contents of this table
	* Fixed bug #9267: "bad" line in realurl manual

2009-10-01  Dmitry Dulepov  <dmitry.dulepov@gmail.com>

	* Removed ereg_* functions (deprecated in PHP 5.3)
	* Small fixes in the redirect module
	* Replace cHash with the one provided in the query string (Snowflake fix)

2009-04-19  Dmitry Dulepov  <dmitry@typo3.org>

	* Reworked redirects module
	* Fixed problem: if default language uid is not 0 and language is not set in the URL, RealURL still used 0

2009-04-18  Dmitry Dulepov  <dmitry@typo3.org>

	* Changed layout and fields in the 'Redirects' function
	* Removed 'Clear cache' on extension update